@@ -3,13 +3,12 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
 AC_COPYRIGHT([$Id$])
-AC_INIT([WSPR], [4.0], [wsjt-devel@lists.sourceforge.net])
+AC_INIT([WSPR], [4.0], [wsjt-devel@lists.sourceforge.net],[],
+[http://www.physics.princeton.edu/pulsar/K1JT/wspr.html])
+
 AC_CONFIG_AUX_DIR([build-aux])
 AC_PREFIX_DEFAULT([$HOME/wspr])
 AC_CANONICAL_HOST
-_VER="4.0"
-_PROG="WSPR"
-FAIL="0"
 
 dnl checks for programs.
 AC_PROG_CC
@@ -35,10 +34,8 @@ AC_PATH_PROG(SED, sed)
 AC_PATH_PROG(AR, ar)
 AC_PATH_PROG(LD, ld)
 AC_PATH_PROG(SHELL, bash)
-AC_SUBST(VERSION, "${version}")
-AC_MSG_CHECKING([OS])
 AC_SUBST(OS, "${host_os}")
-
+AC_SUBST(CPU, "${host_cpu}")
 
 dnl Checks for header files.
 AC_HEADER_STDC
@@ -64,8 +61,13 @@ termios.h unistd.h wait.h])
 
 
 dnl test for lib locations
-if test -d /usr/local/lib ; then
-	LDFLAGS="-L/usr/local/lib ${LDFLAGS}"
+if test -d /usr/lib64 ; then
+	LDFLAGS="-L/opt/lib ${LDFLAGS}"
+fi
+
+dnl test for lib locations
+if test -d /usr/lib64 ; then
+	LDFLAGS="-L/usr/lib64 ${LDFLAGS}"
 fi
 
 dnl test for lib locations
@@ -74,11 +76,16 @@ if test -d /lib ; then
 fi
 
 dnl test for lib locations
+if test -d /usr/local/lib ; then
+	LDFLAGS="-L/usr/local/lib ${LDFLAGS}"
+fi
+
+dnl test for lib locations
 if test -d /usr/lib ; then
 	LDFLAGS="-L/usr/lib ${LDFLAGS}"
 fi
 
-dnl added if aclocal.m4 finds them.
+dnl functions add to flags if found
 CPPFLAGS="-I/usr/include -I/usr/local/include ${CPPFLAGS}"
 LIBS="${LIBS}"
 LDFLAGS="${LDFLAGS} -lpthread"
@@ -101,7 +108,10 @@ AX_CHECK_FFTW3
 dnl check portaudio - ( aclocal.m4 )
 AX_CHECK_PORTAUDIO
 
-dnl test python3
+dnl set failure flag for dependency tests
+FAIL="0"
+
+dnl test Python3
 dnl ----------------------------------------------------------------------------
 if test "${HAS_PYTHON3A}" -eq 1; then
 	AC_SUBST(PYTHON, python)
@@ -115,18 +125,16 @@ else
 	echo
 	echo "Python v3.2+ is required to build $PACKAGE_NAME"
 	echo
-	echo "Standard locations were checked, and not found."
-	echo
 	echo "Possible Solutions:"
 	echo "[1] Install your distro version of: Python v3.2x"
 	echo "[2] Add Python3 to your system paths"
 	echo "[3] Confiure with Python3 non-standard paths:"
 	echo
-	echo './configure --with-python3=/path/to/samplerate.h'
+	echo './configure --with-python3=<Path to Python3>'
 	echo 
 fi
 
-dnl test f2py v2.0
+dnl test f2py
 dnl ----------------------------------------------------------------------------
 if test "${HAS_F2PYA}" -eq 1; then
 	AC_SUBST(F2PY, f2py)
@@ -134,13 +142,11 @@ if test "${HAS_F2PYA}" -eq 1; then
 elif test "${HAS_F2PYB}" -eq 1; then
 	AC_SUBST(F2PY, f2py3)
 
-dnl We could not find f2py
+dnl We could not find F2py
 else
 	FAIL=1
 	echo
 	echo "F2PY v2.0 (Numpy 1.8.1+) is required to build $PACKAGE_NAME"
-	echo
-	echo "Standard locations were checked, and not found."
 	echo
 	echo "Possible Solutions:"
 	echo "[1] Install your distro version of: Python3 Numpy 1.8.1+"
@@ -148,10 +154,9 @@ else
 	echo "[3] Build Numpy from source & add to your system paths"
 	echo "[4] Confiure with F2PY v2.0 non-standard paths:"
 	echo
-	echo './configure --with-f2py3=/path/to/f2py3'
+	echo './configure --with-f2py3=<Path to F2py v2.0'
 	echo 
 fi
-
 
 dnl test gfortran
 dnl ----------------------------------------------------------------------------
@@ -180,21 +185,19 @@ if test "$HAS_SAMPLERATE" -eq 1; then
 	AC_DEFINE([HAS_SAMPLERATE_LIB], [1],)
 	srstatus="OK"
 
-dnl We could not find Samplerate, the libs failed or it's the wrong version
+dnl We could not find Samplerate
 else
 	FAIL=1
 	echo
 	echo "Samplerate-dev is required to build $PACKAGE_NAME"
 	echo
-	echo "Standard locations were checked, and not found."
-	echo
 	echo "Possible Solutions:"
-	echo "[1] Install your distro version of: samplerate-dev"
+	echo "[1] Install your distro version of: Samplerate-dev"
 	echo "[2] Build samplerate from source, install to: /usr/local"
-	echo "[3] Confiure with samplerate with non-standard paths:"
+	echo "[3] Confiure Samplerate with non-standard paths:"
 	echo
-	echo './configure --with-samplerate-include-dir=/path/to/samplerate.h \'
-	echo '--with-samplerate-lib-dir=/path/to/pa/libsamplerate.so'
+	echo './configure --with-samplerate-include-dir=<Path to Samplerate Includes> \'
+	echo '--with-samplerate-lib-dir=<Path to Samplerate Libs>'
 	echo
 fi
 
@@ -209,16 +212,14 @@ dnl We couldn't find FFTW, the libs failed
 else
 	FAIL=1
 	echo
-	echo "FFTW3 Libs are required to build $PACKAGE_NAME"
-	echo
-	echo "Standard locations were checked, and not found."
+	echo "FFTW3 Libs were not found"
 	echo
 	echo "Possible Solutions:"
 	echo "[1] Install your distro version of: libfftw3-dev"
 	echo "[2] Build FFTW3 from source, install to: /usr/local"
-	echo "[3] Confiure with FFTW with non-standard paths:"
+	echo "[3] Confiure FFTW with non-standard paths:"
 	echo
-	echo './configure --with-fftw3-lib-dir=/path/to/pa/libfftw3f.so'
+	echo './configure --with-fftw3-lib-dir=<Path to FFTW Libs>'
 	echo
 fi
 
@@ -234,17 +235,15 @@ dnl We couldn't find Portadio, the libs failed or it's the wrong version
 else
 	FAIL=1
 	echo
-	echo "Portaudio-v19 is required to build $PACKAGE_NAME"
-	echo
-	echo "Standard locations were checked, and not found."
+	echo "Portaudio-v19 was not found"
 	echo
 	echo "Possible Solutions:"
 	echo "[1] Install your distro version of: portaudio19-dev"
 	echo "[2] Build portaudio from source, install to: /usr/local"
-	echo "[3] Confiure with portaudio non-standard paths:"
+	echo "[3] Confiure portaudio with non-standard paths:"
 	echo
-	echo './configure --with-portaudio-include-dir=/path/to/portaudio.h \'
-	echo '--with-portaudio-lib-dir=/path/to/pa/libportaudio.so'
+	echo './configure --with-portaudio-include-dir=<Path to Portaudio Include>'
+	echo '--with-portaudio-lib-dir=<Path to Portaudio Libs>'
 	echo
 fi
 
@@ -260,28 +259,42 @@ AC_SUBST(CPPFLAGS, "${CPPFLAGS}")
 AC_SUBST(LDFLAGS, "${LDFLAGS}")
 AC_SUBST(LIBS, "${LIBS}")
 AC_SUBST(PREFIX, "${prefix}")
-AC_SUBST(VERSION, "${_VER}")
-AC_SUBST(PROGRAM, "${_PROG}")
+AC_SUBST(PROGRAM, "${PACKAGE_NAME}")
+AC_SUBST(VERSION, "${PACKAGE_VERSION}")
+AC_SUBST(BUGS, "${PACKAGE_BUGREPORT}")
+AC_SUBST(WEB, "${PACKAGE_URL}")
+
+if test "${FAIL}" != 0; then
+	echo "** Configure failed to create Makefile **"
+	echo
+else
+
+# output only if everything pases
 AC_CONFIG_FILES(Makefile)
 AC_OUTPUT
 
 dnl do summary
 dnl ----------------------------------------------------------------------------
-echo
-echo "-------------------------------------------"
-echo " Configuration Summary"
-echo "-------------------------------------------"
-echo
-if test "${FAIL}" != 0; then
-echo "** Check ERRORS before running: make **"
-echo
+	echo
+	echo "-------------------------------------------"
+	echo " Configuration Summary"
+	echo "-------------------------------------------"
+	echo
+	echo " Package: .........: ${PROGRAM} ${VERSION}"
+	echo " Python3: .........: ${pylocation}"
+	echo " F2py v2.0: .......: ${f2pylocation}"
+	echo " Fcomplier: .......: ${FC}"
+	echo " Samplerate: ......: ${srstatus}"
+	echo " FFTW3: ...........: ${ffstatus}"
+	echo " Portaudio: .......: ${pastatus}"
+	echo " Install Prefix: ..: ${prefix}"
+	echo
+	echo " Website ..........: ${WEB}"
+	echo " Report Bugs To ...: ${BUGS}"
+	echo
+	echo "Finished creating Makefile, To build $_PROGRAM, type:"
+	echo
+	echo " make"
+	echo
 fi
-echo " Package: ......... ${PROGRAM} ${VERSION}"
-echo " Python3: ......... ${pylocation}"
-echo " F2py v2.0: ....... ${f2pylocation}"
-echo " Fcomplier: ....... ${FC}"
-echo " Samplerate: ...... ${srstatus}"
-echo " FFTW3: ........... ${ffstatus}"
-echo " Portaudio: ....... ${pastatus}"
-echo " Install Prefix: .. ${prefix}"
-echo
+
